--- a/graphs/snmp-informant-advanced.graph.properties
+++ b/graphs/snmp-informant-advanced.graph.properties
@@ -25,8 +25,6 @@ report.ainf.cpupercent.command=--title="Windows CPU {ainfCpuInstance} Utilizatio
  --upper-limit 105 \
  --lower-limit 0 \
  DEF:dpercent={rrd1}:ainfCpuPctProcTime:AVERAGE \
- DEF:minDpercent={rrd1}:ainfCpuPctProcTime:MIN \
- DEF:maxDpercent={rrd1}:ainfCpuPctProcTime:MAX \
  CDEF:dpercent10=0,dpercent,GT,0,dpercent,IF \
  CDEF:dpercent20=10,dpercent,GT,0,dpercent,IF \
  CDEF:dpercent30=20,dpercent,GT,0,dpercent,IF \
@@ -65,8 +63,6 @@ report.ainf.commitpct.command=--title="Windows Committed Memory (SNMP-Informant 
  --upper-limit 100 \
  --rigid \
  DEF:pctcommit={rrd1}:ainfMemPctCommitUsd:AVERAGE \
- DEF:minPctcommit={rrd1}:ainfMemPctCommitUsd:MIN \
- DEF:maxPctcommit={rrd1}:ainfMemPctCommitUsd:MAX \
  LINE2:pctcommit#ff0000:"Used" \
  GPRINT:pctcommit:AVERAGE:"Avg \\: %10.2lf %s" \
  GPRINT:pctcommit:MIN:"Min \\: %10.2lf %s" \
@@ -80,11 +76,7 @@ report.ainf.availmem.command=--title="Windows Available Memory (SNMP-Informant A
  --vertical-label="Bytes" \
  --base=1024 \
  DEF:availmem={rrd1}:ainfMemAvailMB:AVERAGE \
- DEF:minAvailmem={rrd1}:ainfMemAvailMB:MIN \
- DEF:maxAvailmem={rrd1}:ainfMemAvailMB:MAX \
  CDEF:availmemBytes=availmem,1024,*,1024,* \
- CDEF:minAvailmemBytes=minAvailmem,1024,*,1024,* \
- CDEF:maxAvailmemBytes=maxAvailmem,1024,*,1024,* \
  LINE2:availmemBytes#ff0000:"Available" \
  GPRINT:availmemBytes:AVERAGE:"Avg \\: %10.2lf %s" \
  GPRINT:availmemBytes:MIN:"Min \\: %10.2lf %s" \
@@ -96,14 +88,8 @@ report.ainf.mempool.type=nodeSnmp
 report.ainf.mempool.suppress=sinf.mempool
 report.ainf.mempool.command=--title="Windows Memory Pool (SNMP-Informant Advanced)" \
  DEF:mempoolnonpage={rrd1}:ainfMemPNonpagedByt:AVERAGE \
- DEF:minMempoolnonpage={rrd1}:ainfMemPNonpagedByt:MIN \
- DEF:maxMempoolnonpage={rrd1}:ainfMemPNonpagedByt:MAX \
  DEF:mempoolpaged={rrd2}:ainfMemPPagedBytes:AVERAGE \
- DEF:minMempoolpaged={rrd2}:ainfMemPPagedBytes:MIN \
- DEF:maxMempoolpaged={rrd2}:ainfMemPPagedBytes:MAX \
  DEF:mempoolpageres={rrd3}:ainfMemPPagedResByt:AVERAGE \
- DEF:minMempoolpageres={rrd3}:ainfMemPPagedResByt:MIN \
- DEF:maxMempoolpageres={rrd3}:ainfMemPPagedResByt:MAX \
  LINE2:mempoolnonpage#0000ff:"Non-Paged " \
  GPRINT:mempoolnonpage:AVERAGE:"Avg \\: %10.2lf %s" \
  GPRINT:mempoolnonpage:MIN:"Min \\: %10.2lf %s" \
@@ -123,17 +109,9 @@ report.ainf.paging.type=nodeSnmp
 report.ainf.paging.suppress=sinf.paging
 report.ainf.paging.command=--title="Windows Memory Paging (SNMP-Informant Advanced)" \
  DEF:pfaults={rrd1}:ainfMemPageFaultsPS:AVERAGE \
- DEF:minPfaults={rrd1}:ainfMemPageFaultsPS:MIN \
- DEF:maxPfaults={rrd1}:ainfMemPageFaultsPS:MAX \
  DEF:pinput={rrd2}:ainfMemPagesInputPS:AVERAGE \
- DEF:minPinput={rrd2}:ainfMemPagesInputPS:MIN \
- DEF:maxPinput={rrd2}:ainfMemPagesInputPS:MAX \
  DEF:poutput={rrd3}:ainfMemPagesOutPS:AVERAGE \
- DEF:minPoutput={rrd3}:ainfMemPagesOutPS:MIN \
- DEF:maxPoutput={rrd3}:ainfMemPagesOutPS:MAX \
  DEF:pages={rrd4}:ainfMemPagesPerSec:AVERAGE \
- DEF:minPages={rrd4}:ainfMemPagesPerSec:MIN \
- DEF:maxPages={rrd4}:ainfMemPagesPerSec:MAX \
  LINE2:pfaults#0000ff:"Faults " \
  GPRINT:pfaults:AVERAGE:"Avg \\: %10.2lf %s" \
  GPRINT:pfaults:MIN:"Min \\: %10.2lf %s" \
@@ -157,20 +135,10 @@ report.ainf.sysmem.type=nodeSnmp
 report.ainf.sysmem.suppress=sinf.sysmem
 report.ainf.sysmem.command=--title="Windows System Memory (SNMP-Informant Advanced)" \
  DEF:syscacheres={rrd1}:ainfMemSysCacheResB:AVERAGE \
- DEF:minSyscacheres={rrd1}:ainfMemSysCacheResB:MIN \
- DEF:maxSyscacheres={rrd1}:ainfMemSysCacheResB:MAX \
  DEF:syscoderes={rrd2}:ainfMemSysCodeResB:AVERAGE \
- DEF:minSyscoderes={rrd2}:ainfMemSysCodeResB:MIN \
- DEF:maxSyscoderes={rrd2}:ainfMemSysCodeResB:MAX \
  DEF:syscodetot={rrd3}:ainfMemSysCodeTotB:AVERAGE \
- DEF:minSyscodetot={rrd3}:ainfMemSysCodeTotB:MIN \
- DEF:maxSyscodetot={rrd3}:ainfMemSysCodeTotB:MAX \
  DEF:sysdrvres={rrd4}:ainfMemSysDrvResB:AVERAGE \
- DEF:minSysdrvres={rrd4}:ainfMemSysDrvResB:MIN \
- DEF:maxSysdrvres={rrd4}:ainfMemSysDrvResB:MAX \
  DEF:sysdrvtot={rrd5}:ainfMemSysDrvTotB:AVERAGE \
- DEF:minSysdrvtot={rrd5}:ainfMemSysDrvTotB:MIN \
- DEF:maxSysdrvtot={rrd5}:ainfMemSysDrvTotB:MAX \
  LINE2:syscacheres#0000ff:"Res. Cache  " \
  GPRINT:syscacheres:AVERAGE:"Avg \\: %10.2lf %s" \
  GPRINT:syscacheres:MIN:"Min \\: %10.2lf %s" \
@@ -202,8 +170,6 @@ report.ainf.diskfree.command=--title="Windows Available Disk Space {ainfLDskInst
  --lower-limit 0 \
  --upper-limit 100 \
  DEF:avgAvail={rrd1}:ainfLDskPctFreeSpc:AVERAGE \
- DEF:minAvail={rrd1}:ainfLDskPctFreeSpc:MIN \
- DEF:maxAvail={rrd1}:ainfLDskPctFreeSpc:MAX \
  CDEF:dpercent=100,avgAvail,- \
  CDEF:dpercent10=0,dpercent,GT,0,dpercent,IF \
  CDEF:dpercent20=10,dpercent,GT,0,dpercent,IF \
@@ -242,17 +208,9 @@ report.ainf.net.bits.propertiesValues=ainfNetInstance
 report.ainf.net.bits.command=--title="Bits Per Second (SNMP Informant Advanced)" \
  --vertical-label="Bits per second" \
  DEF:octIn={rrd1}:ainBytesRcvdPerSec:AVERAGE \
- DEF:minOctIn={rrd1}:ainBytesRcvdPerSec:MIN \
- DEF:maxOctIn={rrd1}:ainBytesRcvdPerSec:MAX \
  DEF:octOut={rrd2}:ainBytesSentPerSec:AVERAGE \
- DEF:minOctOut={rrd2}:ainBytesSentPerSec:MIN \
- DEF:maxOctOut={rrd2}:ainBytesSentPerSec:MAX \
  CDEF:rawbitsIn=octIn,8,* \
- CDEF:minRawbitsIn=minOctIn,8,* \
- CDEF:maxRawbitsIn=maxOctIn,8,* \
  CDEF:rawbitsOut=octOut,8,* \
- CDEF:minRawbitsOut=minOctOut,8,* \
- CDEF:maxRawbitsOut=maxOctOut,8,* \
  CDEF:rawbitsOutNeg=0,rawbitsOut,- \
  CDEF:rawtotBits=octIn,octOut,+,8,* \
  CDEF:bitsIn=rawbitsIn,UN,0,rawbitsIn,IF \
@@ -269,9 +227,9 @@ report.ainf.net.bits.command=--title="Bits Per Second (SNMP Informant Advanced)"
  GPRINT:rawbitsOut:AVERAGE:"Avg  \\: %8.2lf %s" \
  GPRINT:rawbitsOut:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:rawbitsOut:MAX:"Max  \\: %8.2lf %s\\n" \
- GPRINT:inSum:AVERAGE:"  Tot In  \\: %8.2lf %s" \
- GPRINT:outSum:AVERAGE:" Tot Out  \\: %8.2lf %s" \
- GPRINT:totSum:AVERAGE:" Tot  \\: %8.2lf %s\\n"
+ GPRINT:inSum:"  Tot In  \\: %8.2lf %s" \
+ GPRINT:outSum:" Tot Out  \\: %8.2lf %s" \
+ GPRINT:totSum:" Tot  \\: %8.2lf %s\\n"
 
 report.ainf.net.utilization.name=InOut Traffic (SNMP Informant Adv)
 report.ainf.net.utilization.columns=ainBytesRcvdPerSec,ainBytesSentPerSec,ainCurrentBandwidth
@@ -284,20 +242,10 @@ report.ainf.net.utilization.command=--title="In/Out Traffic Utilization (SNMP In
  --upper-limit 100 \
  --rigid \
  DEF:octIn={rrd1}:ainBytesRcvdPerSec:AVERAGE \
- DEF:minOctIn={rrd1}:ainBytesRcvdPerSec:MIN \
- DEF:maxOctIn={rrd1}:ainBytesRcvdPerSec:MAX \
  DEF:octOut={rrd2}:ainBytesSentPerSec:AVERAGE \
- DEF:minOctOut={rrd2}:ainBytesSentPerSec:MIN \
- DEF:maxOctOut={rrd2}:ainBytesSentPerSec:MAX \
  DEF:curBw={rrd3}:ainCurrentBandwidth:AVERAGE \
- DEF:minCurBw={rrd3}:ainCurrentBandwidth:MIN \
- DEF:maxCurBw={rrd3}:ainCurrentBandwidth:MAX \
  CDEF:percentIn=octIn,8,*,curBw,/,100,* \
- CDEF:minPercentIn=minOctIn,8,*,minCurBw,/,100,* \
- CDEF:maxPercentIn=maxOctIn,8,*,maxCurBw,/,100,* \
  CDEF:percentOut=octOut,8,*,curBw,/,100,* \
- CDEF:minPercentOut=minOctOut,8,*,minCurBw,/,100,* \
- CDEF:maxPercentOut=maxOctOut,8,*,maxCurBw,/,100,* \
  CDEF:percentOutNeg=0,percentOut,- \
  AREA:percentIn#00ff00:"In " \
  GPRINT:percentIn:AVERAGE:"Avg \\: %8.2lf" \
@@ -316,11 +264,7 @@ report.ainf.net.discards.propertiesValues=ainfNetInstance
 report.ainf.net.discards.command=--title="Discards In/Out (SNMP Informant Advanced)" \
  --vertical-label="Discarded packets" \
  DEF:octIn={rrd1}:ainPktsRcvdDiscard:AVERAGE \
- DEF:minOctIn={rrd1}:ainPktsRcvdDiscard:MIN \
- DEF:maxOctIn={rrd1}:ainPktsRcvdDiscard:MAX \
  DEF:octOut={rrd2}:ainPktsOutDiscard:AVERAGE \
- DEF:minOctOut={rrd2}:ainPktsOutDiscard:MIN \
- DEF:maxOctOut={rrd2}:ainPktsOutDiscard:MAX \
  CDEF:octOutNeg=0,octOut,- \
  AREA:octIn#00ff00:"In " \
  GPRINT:octIn:AVERAGE:"Avg  \\: %8.2lf %s" \
@@ -339,11 +283,7 @@ report.ainf.net.errors.propertiesValues=ainfNetInstance
 report.ainf.net.errors.command=--title="Errors In/Out (SNMP Informant Advanced)" \
  --vertical-label="Errant packets" \
  DEF:octIn={rrd1}:ainPktsRcvdErrors:AVERAGE \
- DEF:minOctIn={rrd1}:ainPktsRcvdErrors:MIN \
- DEF:maxOctIn={rrd1}:ainPktsRcvdErrors:MAX \
  DEF:octOut={rrd2}:ainPktsOutErrors:AVERAGE \
- DEF:minOctOut={rrd2}:ainPktsOutErrors:MIN \
- DEF:maxOctOut={rrd2}:ainPktsOutErrors:MAX \
  CDEF:octOutNeg=0,octOut,- \
  AREA:octIn#00ff00:"In " \
  GPRINT:octIn:AVERAGE:"Avg  \\: %8.2lf %s" \
@@ -362,8 +302,6 @@ report.ainf.net.unknown.propertiesValues=ainfNetInstance
 report.ainf.net.unknown.command=--title="Unknown Packets (SNMP Informant Advanced)" \
  --vertical-label="Unknown packets" \
  DEF:octIn={rrd1}:ainPktsRcvdUnknown:AVERAGE \
- DEF:minOctIn={rrd1}:ainPktsRcvdUnknown:MIN \
- DEF:maxOctIn={rrd1}:ainPktsRcvdUnknown:MAX \
  AREA:octIn#00ff00:"In " \
  GPRINT:octIn:AVERAGE:"Avg  \\: %8.2lf %s" \
  GPRINT:octIn:MIN:"Min  \\: %8.2lf %s" \
@@ -377,11 +315,7 @@ report.ainf.net.packets.propertiesValues=ainfNetInstance
 report.ainf.net.packets.command=--title="Packets In/Out (SNMP Informant Advanced)" \
  --vertical-label="Packets" \
  DEF:octIn={rrd1}:ainPktsRcvdPerSec:AVERAGE \
- DEF:minOctIn={rrd1}:ainPktsRcvdPerSec:MIN \
- DEF:maxOctIn={rrd1}:ainPktsRcvdPerSec:MAX \
  DEF:octOut={rrd2}:ainPktsSentPerSec:AVERAGE \
- DEF:minOctOut={rrd2}:ainPktsSentPerSec:MIN \
- DEF:maxOctOut={rrd2}:ainPktsSentPerSec:MAX \
  CDEF:octOutNeg=0,octOut,- \
  AREA:octIn#00ff00:"In " \
  GPRINT:octIn:AVERAGE:"Avg  \\: %8.2lf %s" \
@@ -399,17 +333,9 @@ report.ainf.net.packettypes.propertiesValues=ainfNetInstance
 report.ainf.net.packettypes.command=--title="Packet Types In/Out (SNMP Informant Advanced)" \
  --vertical-label="Packets" \
  DEF:nuIn={rrd1}:ainPktsRcvdNUPerSec:AVERAGE \
- DEF:minNuIn={rrd1}:ainPktsRcvdNUPerSec:MIN \
- DEF:maxNuIn={rrd1}:ainPktsRcvdNUPerSec:MAX \
  DEF:ucIn={rrd2}:ainPktsRcvdUCPerSec:AVERAGE \
- DEF:minUcIn={rrd2}:ainPktsRcvdUCPerSec:MIN \
- DEF:maxUcIn={rrd2}:ainPktsRcvdUCPerSec:MAX \
  DEF:nuOut={rrd3}:ainPktsSentNUPerSec:AVERAGE \
- DEF:minNuOut={rrd3}:ainPktsSentNUPerSec:MIN \
- DEF:maxNuOut={rrd3}:ainPktsSentNUPerSec:MAX \
  DEF:ucOut={rrd4}:ainPktsSentUCPerSec:AVERAGE \
- DEF:minUcOut={rrd4}:ainPktsSentUCPerSec:MIN \
- DEF:maxUcOut={rrd4}:ainPktsSentUCPerSec:MAX \
  CDEF:nuOutNeg=0,nuOut,- \
  CDEF:ucOutNeg=0,ucOut,- \
  COMMENT:"In\\n" \
